Improve Factor Lab research and performance
